Fix for footer social links being too large on a computer

--- a/2019/_sass/_includes/_socials.scss
+++ b/2019/_sass/_includes/_socials.scss
@@ -44,7 +44,8 @@
 		font-size: 22px;
 	}
 
-	@include mq(laptop) {
+	// @include mq(laptop) {
+	@media only screen and (min-device-width: $break-laptop) {
 		$dim: 40px;
 		width: $dim;
 		height: $dim;
